// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test generate template test generate component node 1`] = `
"  <Test>
    test
  </Test>"
`;

exports[`test generate template test generate component node 2`] = `
"  <form-create>
    test
  </form-create>"
`;

exports[`test generate template test generate form component 1`] = `
"  <form-creator-config-provider :locale="locale">
    <div class="container">
      <div class="submit-container">
        <a-button
          type="primary"
          @click="handleSubmit"
          class="submit-btn"
        >
          {{$t('saveBtn')}}
        </a-button>
      </div>
      <div
        v-if="a"
        v-show="b"
        v-for="data of formCreateData"
        :key="data.key"
        class="form-item"
        @click="handleSubmit"
      >
        <h2>
          {{ data.title }}
        </h2>
        <form-create
          v-model="formApis[data.key]"
          :rule="data.formItems"
          :option="options"
        />
      </div>
    </div>
  </form-creator-config-provider>"
`;

exports[`test generate template test generate simple node 1`] = `
"  <div>
    test
  </div>"
`;

exports[`test generate template test generate simple node with attrs 1`] = `
"  <div class="test" v-if="visible">
    test
  </div>"
`;

exports[`test generate template test generate simple node with interpolation expression 1`] = `
"  <div>
    {{ test }}
  </div>"
`;

exports[`test generate template test generate with scopedSlots 1`] = `
"  <n-selector style="width: 30px;">
    <template #trigger="{ toggle }">
      <div
        id="portrait-more"
        style="cursor: pointer;width: 30px;height: 30px;"
        @click="toggle"
        v-html="moreIcon"
      />
    </template>
    <template #panel>
      <n-selector-item>
        <help
          label="帮助"
          :icon-size="26"
          :config-list="configList"
        >
          <template #title>
            <div>
              自定义 title
            </div>
          </template>
        </help>
      </n-selector-item>
    </template>
    <span>
      children
    </span>
  </n-selector>"
`;
